--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.13.7",
+    "@mui/lab": "^5.0.0-alpha.135",
     "@mui/material": "^5.13.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -12,6 +14,7 @@
     "axios": "^1.4.0",
     "express": "^4.18.2",
     "framer-motion": "^10.12.18",
+    "material-icons": "^1.13.8",
     "nodemailer": "^6.9.3",
     "nodemailer-smtp-transport": "^2.7.4",
     "react": "^18.2.0",
