change favicon for 32x32

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Арген и Адинай",
-  "name": "Create React App Sample",
+  "name": "Торжество бракосочетания",
   "icons": [
     {
       "src": "favicon.ico",
